[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'fastapi_exceptionshandler'
version = "0.0.1"
license = {text = "MIT License"}
authors = [
  { name="SirPaulO", email="me@sirpauloliver.com" },
]
dependencies = [
    "fastapi>=0.95.2",
]
keywords = ["fastapi", "middleware", "exception", "error", "handler", "response", "api"]
description = 'Standardize and handle exceptions in FastAPI more elegantly'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SirPaulO/fastapi_exceptionshandler"
"Bug Tracker" = "https://github.com/SirPaulO/fastapi_exceptionshandler/issues"
"Repository" = "https://github.com/SirPaulO/fastapi_exceptionshandler.git"
