[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'fastapi_exceptionshandler'
version = "0.0.2"
license = {text = "MIT License"}
authors = [
  { name="SirPaulO", email="me@sirpauloliver.com" },
]
dependencies = [
    "fastapi>=0.95.2",
]
keywords = ["fastapi", "middleware", "exception", "error", "handler", "response", "api"]
description = 'Standardize and handle exceptions in FastAPI more elegantly'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SirPaulO/fastapi_exceptionshandler"
"Bug Tracker" = "https://github.com/SirPaulO/fastapi_exceptionshandler/issues"
"Repository" = "https://github.com/SirPaulO/fastapi_exceptionshandler.git"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_strict_optional = true
no_implicit_optional = true
implicit_reexport = true
explicit_package_bases = true
namespace_packages = true
follow_imports = "silent"
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120
target-version = ['py39']
